correcoes bugs e listagem de fotos de determinado delivery
